test/resilience/testdata/config_extension_backend_metadata.yaml
apiVersion: v1
kind: ConfigMap
metadata:
  name: envoy-gateway-config
  namespace: envoy-gateway-system
data:
  envoy-gateway.yaml: |
    apiVersion: gateway.envoyproxy.io/v1alpha1
    kind: EnvoyGateway
    provider:
      type: Kubernetes
    gateway:
      controllerName: gateway.envoyproxy.io/gatewayclass-controller
    extensionManager:
      backendResources:
      - group: ext-a.example.io
        version: v1
        kind: FooBackend
      hooks:
        xdsTranslator:
          post:
          - Route
      service:
        fqdn:
          hostname: gateway-simple-extension-server.envoy-gateway-system.svc.cluster.local
          port: 5005
