test/resilience/testdata/route_changes.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: backend
  namespace: gateway-resilience
spec:
  parentRefs:
    - name: all-namespaces
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /route-change
      backendRefs:
        - name: backend
          port: 8080
