test/resilience/testdata/route_for_extension_backend_metadata.yaml
apiVersion: ext-a.example.io/v1
kind: FooBackend
metadata:
  name: metadata-backend
  namespace: gateway-resilience
spec: {}
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: extension-backend-metadata
  namespace: gateway-resilience
spec:
  parentRefs:
    - name: all-namespaces
  hostnames: ["metadata-backend.example.com"]
  rules:
    - backendRefs:
        - group: ext-a.example.io
          kind: FooBackend
          name: metadata-backend
