test/resilience/testdata/route_for_extension_manager.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: valid-route-for-extension-server
  namespace: gateway-resilience
spec:
  parentRefs:
    - name: all-namespaces
  hostnames: ["www.pass.com"]
  rules:
    - matches:
        - path:
            type: Exact
            value: /pass
      backendRefs:
        - name: backend
          port: 8080
